--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tamagui/next-theme": "^1.120.1",
     "next": "14",
     "react": "18",
     "react-dom": "18",
