--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tamagui/lucide-icons": "^1.120.1",
     "@tamagui/next-theme": "^1.120.1",
     "next": "14",
     "react": "18",
