--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tamagui/lucide-icons": "^1.120.1",
     "@tamagui/next-theme": "^1.120.1",
+    "lucide-react": "^0.468.0",
     "next": "14",
     "react": "18",
     "react-dom": "18",
